--- a/theme-landing/index.html
+++ b/theme-landing/index.html
@@ -7,27 +7,10 @@
 </head>
 <body>
   <p>正在為你開啟 ASUS Themes ...</p>
-
-  <a id="themeLink" href="asusthemes://themes/detail?id=th0111222300" style="display:none;">
-    Open Theme
-  </a>
-
   <script>
-    var themeUrl = "asusthemes://themes/detail?id=th0111222300";
-    var intentUrl = "intent://themes/detail?id=th0111222300#Intent;scheme=asusthemes;package=com.asus.themes;end";
-
-    // 嘗試用 location.replace
-    try {
-      window.location.replace(themeUrl);
-    } catch (e) {
-      // 如果失敗，觸發隱藏 a 標籤
-      document.getElementById("themeLink").click();
-    }
-
-    // 保險：2 秒後再 fallback 用 intent
     setTimeout(function() {
-      window.location.href = intentUrl;
-    }, 2000);
+      window.location.href = "asusthemes://themes/detail?id=th01112223001";
+    }, 1200); // 延遲 1.2 秒
   </script>
 </body>
 </html>
